fix security foundation